styling of then question card

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <title>Kirstie's Quiz App</title>
   </head>
-  <body class=bg-pink-200
+  <body class="bg-pink-300 text-white flex justify-center items-center h-screen "
 
 
   >
